[package]
name = "totp_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = {version = "1.46.1" , features = ["full"] }
tower-sessions = "0.14.0"

anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
